# orgelpredigt_analyse

./: .gitignore  aggregate_comparison_song_quote_distribution.ipynb  analyse_individual_sermon.ipynb  analyse_several_sermons.ipynb  bible_to_verses.ipynb  chroma.py  chroma_predictions.py  chroma_setup.py  chunked_sermon_song_search.ipynb  collect_all_sources.ipynb  common_ocr_mistakes.json  create_similarity_table.ipynb  describing_sermon_corpus.py  generate_embeddings.ipynb  get_praxis_pietatis_melica.ipynb  ngram_test.ipynb  orgelpredigt_analysis.py  orgelpredigt_analysis_old.py  performance_test.py  performance_test_similarity.py  performance_test_vector.py  predigten_übersicht.json  pyproject.toml  requirements.txt  sermon_to_chunks.ipynb  sermons_to_table.ipynb  sermons_with_longest_music.json  sermons_with_most_music.json  sim_search_songs_and_bible.ipynb  similarity_predictions.ipynb  songs_to_pages_mapping.json  test_comparison.py  test_results.json  test_results_longest.json  test_results_most.json  web_visualisation.py  web_visualisation_comparing_all_sermons.py  word_embedding_test.ipynb
core/: similaritysearch.py  utils.py
corpus_description/: aggregate_comparison_song_quote_distribution.ipynb  collect_all_sources.ipynb  describing_sermon_corpus.py
ma_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
performance_tests/: performance_test_similarity.py  performance_test_vector.py  test_comparison.py
predictions/: E000036_bibel_similarity_search_70_25-09-20_16:54.csv  E000036_lieder_similarity_search_70_25-09-20_16:54.csv  E000036_predictions.json  (+5 more)
(+1419 files in other folders)
